--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@ for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Intellige
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
-<li><p>K. Tian,, <b>B. Duo</b>*, and X. Yuan, "Hybrid Offline-Online Design for Reconfigurable Intelligent Surface Aided UAV Communication", 
+<li><p>K. Tian, <b>B. Duo</b>*, and X. Yuan, "Hybrid Offline-Online Design for Reconfigurable Intelligent Surface Aided UAV Communication", 
 IEEE Communications Letters, 2023.（SCI, 中科院3区, IF=3.553）</p>
 </li>
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", 
 IEEE Communications Letters, 2022.（SCI, 中科院3区, IF=3.553）</p>
 </li>
-<li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 硕士生付振江 论文被“无线电工程”期刊录用, 2022. (中文核心)</p>
+<li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 无线电工程, 2022. (中文核心)</p>
 </li>
 <li><p>Z. Zhai, X. Dai, <b>B. Duo</b>, Z. Wang and X. Yuan*, "Energy-Efficient UAV-Mounted RIS Assisted
-Mobile Edge Computing", IEEE Wireless Communications Letters, 2022, 11(12): 2507-2511. | 本科生翟志远 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
+Mobile Edge Computing", IEEE Wireless Communications Letters, 2022, 11(12): 2507-2511.（SCI, 中科院2区, IF=5.281）</p>
 </li>
-<li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", IEEE Wireless Communications Letters, 2022, 11(4): 866-870. | 硕士生代鑫鸿 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
+<li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", IEEE Wireless Communications Letters, 2022, 11(4): 866-870.（SCI, 中科院2区, IF=5.281）</p>
 </li>
-<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", IEEE SECON 2022, 2022. | 硕士生邵明谦 论文被IEEE SECON 2022（CCF-B）会议录用</p>
+<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", IEEE SECON 2022, 2022.（CCF-B）</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
 UAV-Enabled Communications via Intelligent Omni-Surface", IEEE Wireless Communications Letters, 2022, 11(9): 1955-1959. | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
