--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@ Mobile Edge Computing", IEEE Wireless Communications Letters, 2022, 11(12): 2507
 <li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", IEEE SECON 2022, 2022.（CCF-B）</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
-UAV-Enabled Communications via Intelligent Omni-Surface", IEEE Wireless Communications Letters, 2022, 11(9): 1955-1959. | 硕士生刘一凡 论文被IEEE WCL（中科院2区, IF=5.281）期刊录用</p>
+UAV-Enabled Communications via Intelligent Omni-Surface", IEEE Wireless Communications Letters, 2022, 11(9): 1955-1959.（SCI, 中科院2区, IF=5.281）</p>
 </li>
 <li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
-Threats for UAV-Assisted Wireless Sensor Networks", Accepted by China Communications, 2022. (中科院3区, IF=2.688)  | 硕士生胡豪 论文被CHINA COMMUN（中科院3区, IF=3.17）期刊录用</p>
+Threats for UAV-Assisted Wireless Sensor Networks", China Communications, 2022. (SCI, 中科院3区, IF=2.688)</p>
 </li>
 <li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
-Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (中科院2区, IF=4.348)  | 本科生田凯元 论文被IEEE WCL期刊录用</p>
+Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (SCI, 中科院2区, IF=4.348)</p>
 </li>
-<li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (中科院2区, IF=6.91)  ｜ 硕士生胡豪 论文被VEH COMMUN（中科院2区, IF=6.91）期刊录用</p>
+<li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (SCI, 中科院2区, IF=6.91)</p>
 </li>
-<li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021. (中科院2区, IF=4.11)  ｜ 硕士生李沂莲 论文被AD HOC NETW（中科院2区, IF=4.111）期刊录用</p>
+<li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021. (SCI, 中科院2区, IF=4.11)</p>
 </li>
 </li>
-<li><p><b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, vol. 18, no. 1, pp. 1673-5447, Jan. 2021. (中科院3区, IF=2.688)</p>
+<li><p><b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, vol. 18, no. 1, pp. 1673-5447, Jan. 2021. (SCI, 中科院3区, IF=2.688)</p>
 </li>
 <li><p><b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6. ｜ 硕士生胡豪 论文被IEEE ICC2021会议录用</p>
 </li>
