--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </li>
 <li><p><b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, vol. 18, no. 1, pp. 1673-5447, Jan. 2021. (SCI, 中科院3区, IF=2.688)</p>
 </li>
-<li><p><b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6. ｜ 硕士生胡豪 论文被IEEE ICC2021会议录用</p>
+<li><p><b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6.</p>
 </li>
-<li><p>S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan*, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, vol. 20, no. 10, pp. 6402-6417, Dec. 2021. (中科院1区Top，IF = 7.016)</p>
+<li><p>S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan*, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, vol. 20, no. 10, pp. 6402-6417, Dec. 2021. (SCI, 中科院1区Top，IF = 7.016)</p>
 </li>
-<li><p>S. Li, <b>B. Duo</b>, X. Yuan*, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (中科院2区, IF=4.348, ESI高被引)</p>
+<li><p>S. Li, <b>B. Duo</b>, X. Yuan*, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (SCI, 中科院2区, IF=4.348, ESI高被引)</p>
 </li>
-<li><p><b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (中科院2区Top, IF=5.978)</p>
+<li><p><b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (SCI, 中科院2区Top, IF=5.978)</p>
 </li>
-<li><p><b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (中科院2区Top, IF=5.978)</p>
+<li><p><b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (SCI, 中科院2区Top, IF=5.978)</p>
 </li>
-<li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial cooperative jamming for cellular-enabled UAV secure communication network: Joint trajectory and power control design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (中科院2区Top, IF=3.756)</p>
+<li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial cooperative jamming for cellular-enabled UAV secure communication network: Joint trajectory and power control design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (SCI, 中科院2区Top, IF=3.756)</p>
 </li>
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
