--- a/index.html
+++ b/index.html
@@ -105,11 +105,14 @@ IoT", Submitted to IEEE Internet of Things Journal, 2022.</p>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
 for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Intelligent Transportation Systems, 2022.</p>
 </li>
-<li><p>A. Shen, J. Luo*, J. Ning, Yi. Li, Z. Wang*, and <b>B. Duo</b>, "Safeguarding UAV Networks against Active Eavesdropping: An Elevation Angle-Distance Trade-off for Secrecy Enhancement", Submitted to Drones, 2022.</p>
-</li>
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
+<li><p>A. Shen, J. Luo*, J. Ning, Yi. Li, Z. Wang*, and <b>B. Duo</b>, "Safeguarding UAV Networks against Active Eavesdropping: An Elevation Angle-Distance Trade-off for Secrecy Enhancement", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
+</li>
+<li><p>J. Ning, Y.Zhou, X. Liao, and <b>B. Duo</b>*, "Single Remote Sensing Image Dehazing Using Robust Light-dark Prior", 
+Remote Sensing, 2023.（SCI, 中科院2区Top, IF=5.349）</p>
+</li>
 <li><p>K. Tian, <b>B. Duo</b>*, and X. Yuan, "Hybrid Offline-Online Design for Reconfigurable Intelligent Surface Aided UAV Communication", 
 IEEE Communications Letters, 2023.（SCI, 中科院3区, IF=3.553）</p>
 </li>
