--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ of Electronic Science and Technology of China, as a Research Fellow.
 He is currently a Professor with the College of Computer Science and Cyber Security, Chengdu University of Technology, Chengdu, China. 
 His research interests include convex optimization theory, UAV communications for 6G and information security.<p>
 <p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能信息处理与无人机应用创新团队负责人，四川省海外高层次留学人才、四川省侨联特聘专家，IEEE/CIC/CCF Member。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
-近期主要从事智能科学与技术及应用方面的教学科研工作，主要研究方向为6G赋能的无人集群行业解决方案、物联网信息安全技术、优化理论与人工智能及其交叉领域的应用等方面。近年来，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；在IEEE等出版的国内外权威期刊和会议上发表SCI/EI检索论文40余篇，英文专著1部，专利10余项，获软件著作权10余项；担任多家国内外权威期刊特约审稿人。</p>
+近期主要从事智能通信与网络方面的教学与科研工作，主要研究方向为6G赋能的无人集群行业解决方案、物联网信息安全技术、优化理论与人工智能及其交叉领域的应用等方面。近年来，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；在IEEE等出版的国内外权威期刊和会议上发表SCI/EI检索论文40余篇，英文专著1部，专利10余项，获软件著作权10余项；担任多家国内外权威期刊特约审稿人。</p>
 
 <h2>Research</h2>
 <p>My research interests include: </p>
@@ -119,7 +119,7 @@ IEEE Communications Letters, 2023.（SCI, 中科院3区, IF=3.553）</p>
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", 
 IEEE Communications Letters, 2022.（SCI, 中科院3区, IF=3.553）</p>
 </li>
-<li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 无线电工程, 2022. (中文核心)</p>
+<li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 无线电工程, 2023. (中文核心)</p>
 </li>
 <li><p>Z. Zhai, X. Dai, <b>B. Duo</b>, Z. Wang and X. Yuan*, "Energy-Efficient UAV-Mounted RIS Assisted
 Mobile Edge Computing", IEEE Wireless Communications Letters, 2022, 11(12): 2507-2511.（SCI, 中科院2区, IF=5.281）</p>
