--- a/index.html
+++ b/index.html
@@ -93,8 +93,13 @@ His research interests include convex optimization theory, UAV communications fo
 <ol>
 <li><p><b>B. Duo</b>, A. Shen, Q. Wu*, X. Yuan, "Computing power routing design for computing-aware FANET", Submitted to IEEE Network, 2023.</p>
 </li>
-<li><p><b>B. Duo</b>, A. Kong, Q. Wu*, X. Yuan, "Intelligent trajectory and pick-up design for  connectivity-aware UAV-enabled transportation system", 
+<li><p><b>B. Duo</b>, A. Kong, Q. Wu*, X. Yuan, "Intelligent trajectory and pick-up design for connectivity-aware UAV-enabled transportation system", 
 Submitted to IEEE Transactions on Intelligent Transportation Systems, 2023.</p>
+</li>
+<li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>*, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", 
+Submitted to Ad Hoc Networks, 2023.</p>
+</li>
+<li><p><b>多滨</b>, 汪潇, 赖欢, 武庆庆, 宁进, 王梓斌*, "智能反射面辅助无人机抗干扰通信方法研究", 电子与信息学报, 2023.</p>
 </li>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", 
 Submitted to  IEEE Transactions on Wireless Communications, 2023.</p>
