--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@ Submitted to Ad Hoc Networks, 2023.</p>
 </li>
 <li><p><b>多滨</b>, 汪潇, 赖欢, 武庆庆, 宁进, 王梓斌*, "智能反射面辅助无人机抗干扰通信方法研究", 电子与信息学报, 2023.</p>
 </li>
+<li><p>罗俊松, 陈丽蓉, 宁进, 胡艳梅, <b>多滨</b>*, "无人机集群反制技术研究现状与展望", 网络与信息安全学报, 2023.</p>
+</li>
+<li><p>罗俊松, 王豪, 宁进, 胡艳梅, <b>多滨</b>*, "无人机射频指纹识别方法研究", 物联网学报, 2023.</p>
+</li>
+<li><p>罗俊松, 江绍宇, 宁进, 胡艳梅, <b>多滨</b>*, "无人机集群网络架构研究现状", 电讯技术, 2023.</p>
+</li>
+<li><p>罗俊松, 吴生平, 宁进, 胡艳梅, <b>多滨</b>*, "基于人工智能算法的无人机集群路由协议综述", 重庆邮电大学学报, 2023.</p>
+</li>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", 
 Submitted to  IEEE Transactions on Wireless Communications, 2023.</p>
 </li>
