--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@ His research interests include convex optimization theory, UAV communications fo
 <li><p><b>B. Duo</b>, A. Kong, Q. Wu*, X. Yuan, "Intelligent trajectory and pick-up design for connectivity-aware UAV-enabled transportation system", 
 Submitted to IEEE Transactions on Intelligent Transportation Systems, 2023.</p>
 </li>
+<li><p>M. Li, J. Luo*, J. Ning, Z. Wang, <b>B. Duo</b> , "UAV swarm communications: Recent advances and technical review", 
+Submitted to Vehicular Communications, 2023.</p>
 <li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>*, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", 
 Submitted to Ad Hoc Networks, 2023.</p>
 </li>
