--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@ Since 2018, he has been with the National Laboratory of Science and Technology o
 of Electronic Science and Technology of China, as a Research Fellow.
 He is currently a Professor with the College of Computer Science and Cyber Security, Chengdu University of Technology, Chengdu, China. 
 His research interests include convex optimization theory, UAV communications for 6G and information security.<p>
-<p>多滨，男，博士（后），教授，硕士生导师，成都理工大学智能信息处理与无人机应用创新团队负责人，四川省海外高层次留学人才、四川省侨联特聘专家，IEEE/CIC/CCF Member。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰国家级重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
-近期主要从事智能通信与网络方面的教学与科研工作，主要研究方向为6G赋能的无人集群行业解决方案、物联网信息安全技术、优化理论与人工智能及其交叉领域的应用等方面。近年来，主持和参与国家自然科学基金项目、国家重点研发计划项目、四川省重点研发计划项目等10余项；在IEEE等出版的国内外权威期刊和会议上发表SCI/EI检索论文40余篇，英文专著1部，专利10余项，获软件著作权10余项；担任多家国内外权威期刊特约审稿人。</p>
+<p>多滨，男，1982年2月生，汉族，九三学社社员，博士（后），成都理工大学计算机与网络安全学院教授，硕士生导师，物联网与智能科学系副主任，智能信息处理与无人机应用创新团队负责人，四川省海外高层次留学人才、四川省侨联特聘专家，山东产业技术研究院项目研究员，IEEE/CIC/CCF Member。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
+近年来，在智能无线通信与网络领域取得了丰硕的研究成果，在IEEE等出版的国内外权威期刊和会议上发表学术论文50余篇，其中SCI检索论文29篇（中科院2区以上论文20篇，ESI热点、高被引论文1篇），EI检索论文18篇，具有较高的影响力，谷歌学术总引用次数超过900次，已发表英文学术专著2部，申请专利10余项，获软件著作权10余项。主持和参与国家级、省部级项目等10余项，获得川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖等10余项，并担任多部国内外权威期刊特约审稿人。
+近期研究方向：无人集群智能组网与协同通信关键技术、无人集群系统安全、全自主智能机器人技术与装备智能化、优化理论与人工智能及其交叉领域的应用等方面。
+</p>
 
 <h2>Research</h2>
 <p>My research interests include: </p>
@@ -173,7 +175,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </li>
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
-<p><a href="https://scholar.google1.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p> 
+<p><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Full list of publications in Google Scholar</a>.</p> 
 <h3>Academic service</h3>
 <p><b>Membership</b></p>
 <ul>
