--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@ His research interests include convex optimization theory, UAV communications fo
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
-<li><p>Industry Solution to UAV Swarm Applications ｜ 无人集群行业解决方案</p>
-</li>
 <li><p>Intelligent Networking and collaborative communications for UAV Swarm | 无人集群智能组网与协同通信关键技术</p>
 </li>
-<li><p>Information Security for IoT | 物联网信息安全技术</p>
+<li><p>Autonomous intelligent robot technology and intelligent equipment ｜ 全自主智能机器人技术与装备智能化</p>
+</li>
+<li><p>Security for UAV swarm system | 无人集群系统安全</p>
 </li>
 <li><p>AI/Semantic Communication for Music Information Retrieval | 基于人工智能/语义通信的音乐信息检索技术</p>
 </li>
