--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@ His research interests include convex optimization theory, UAV communications fo
 Submitted to IEEE Transactions on Intelligent Transportation Systems, 2023.</p>
 </li>
 <li><p>M. Li, J. Luo*, J. Ning, Z. Wang, <b>B. Duo</b> , "UAV swarm communications: Recent advances and technical review", 
-Submitted to Vehicular Communications, 2023.</p>
-
+Submitted to Vehicular Communications, 2023.</p><li>
+<li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications with Directional Antennas: Tilting Effect Modeling and Trajectory Optimization", 
+Submitted to  IEEE Transactions on Wireless Communications, 2023.</p>
+<li>
 <li><p><b>多滨</b>, 汪潇, 赖欢, 武庆庆, 宁进, 王梓斌*, "智能反射面辅助无人机抗干扰通信方法研究", 电子与信息学报, 2023.</p>
 </li>
 <li><p>罗俊松, 陈丽蓉, 宁进, 胡艳梅, <b>多滨</b>*, "无人机集群反制技术研究现状与展望", 网络与信息安全学报, 2023.</p>
@@ -113,8 +115,7 @@ Submitted to Vehicular Communications, 2023.</p>
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
-<li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>*, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", 
-Submitted to Ad Hoc Networks, 2023.</p>
+<li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>*, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", Drones, 2023.</p>
 </li>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", 
 Submitted to  IEEE Transactions on Wireless Communications, 2023.</p>
