--- a/index.html
+++ b/index.html
@@ -115,18 +115,17 @@ Submitted to  IEEE Transactions on Wireless Communications, 2023.</p>
 </ol>
 <h3>Recent selected publications </h3>
 <ol>
-<li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>*, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", Drones, 2023.</p>
-</li>
-<li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", 
-Submitted to  IEEE Transactions on Wireless Communications, 2023.</p>
+<li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", IEEE Transactions on Wireless Communications, 2023. (SCI, 中科院1区Top，IF = 7.016)</p>
 </li>
 <li><p><b>B. Duo</b>, M. He, Q. Wu*, X. Yuan, and Z. Zhang*, "Joint Dual-UAV Trajectory and RIS Design for ARIS-Assisted Cooperative Aerial Computing in
-IoT", Submitted to IEEE Internet of Things Journal, 2022.</p>
+IoT", IEEE Internet of Things Journal, 2023. (SCI, 中科院1区Top, IF=10.6)</p>
 </li>
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
-for Aerial RIS-aided Communication", Submitted to IEEE Transactions on Intelligent Transportation Systems, 2022.</p>
+for Aerial RIS-aided Communication", IEEE Transactions on Intelligent Transportation Systems, 2023. (SCI, 中科院1区Top, IF=8.5)</p>
 </li>
-<li><p>罗俊松, 王豪, 宁进, 胡艳梅, <b>多滨</b>*, "无人机射频指纹识别方法研究", 物联网学报, 2023.</p>
+<li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>*, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
+</li>
+<li><p>罗俊松, 王豪, 宁进, 胡艳梅, <b>多滨</b>*, "无人机射频指纹识别方法研究", 无线电工程, 2023. (中文核心)</p>
 </li>
 <li><p>A. Shen, J. Luo*, J. Ning, Yi. Li, Z. Wang*, and <b>B. Duo</b>, "Safeguarding UAV Networks against Active Eavesdropping: An Elevation Angle-Distance Trade-off for Secrecy Enhancement", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
 </li>
