--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ IoT", IEEE Internet of Things Journal, 2023. (SCI, 中科院1区Top, IF=10.6)</p
 <li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
 for Aerial RIS-aided Communication", IEEE Transactions on Intelligent Transportation Systems, 2023. (SCI, 中科院1区Top, IF=8.5)</p>
 </li>
-<li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>*, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
+<li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
 </li>
 <li><p>罗俊松, 王豪, 宁进, 胡艳梅, <b>多滨</b>*, "无人机射频指纹识别方法研究", 无线电工程, 2023. (中文核心)</p>
 </li>
