--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ His research interests include convex optimization theory, UAV communications fo
 Submitted to IEEE Transactions on Intelligent Transportation Systems, 2023.</p>
 </li>
 <li><p>M. Li, J. Luo*, J. Ning, Z. Wang, <b>B. Duo</b> , "UAV swarm communications: Recent advances and technical review", 
-Submitted to Vehicular Communications, 2023.</p><li>
+Submitted to Vehicular Communications, 2023.</p>
+<li>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications with Directional Antennas: Tilting Effect Modeling and Trajectory Optimization", 
 Submitted to  IEEE Transactions on Wireless Communications, 2023.</p>
 <li>
