--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ of Electronic Science and Technology of China, as a Research Fellow.
 He is currently a Professor with the College of Computer Science and Cyber Security, Chengdu University of Technology, Chengdu, China. 
 His research interests include convex optimization theory, UAV communications for 6G and information security.<p>
 <p>多滨，男，1982年2月生，汉族，九三学社社员，博士（后），成都理工大学计算机与网络安全学院教授，硕士生导师，物联网与智能科学系副主任，全自主智能无人系统研究中心负责人，四川省海外高层次留学人才、四川省侨联特聘专家，山东产业技术研究院项目研究员，IEEE/CIC/CCF Member。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
-近年来，在智能无线通信与网络领域取得了丰硕的研究成果，在IEEE等出版的国内外权威期刊和会议上发表学术论文50余篇，其中SCI检索论文30篇（中科院2区以上论文21篇，ESI热点、高被引论文1篇），EI检索论文18篇，具有较高的影响力，谷歌学术总引用次数千余次，已发表英文学术专著2部，申请专利10余项，获软件著作权10余项。主持和参与国家级、省部级项目等10余项，获得川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖等10余项，并担任多部国内外权威期刊特约审稿人。
+近年来，在智能无线通信与网络领域取得了丰硕的研究成果，在IEEE等出版的国内外权威期刊和会议上发表学术论文50余篇，其中SCI检索论文30篇（中科院2区以上论文21篇，ESI热点、高被引论文1篇），EI检索论文18篇，具有较高的影响力，谷歌学术总引用次数千余次，已发表英文学术专著2部，申请专利10余项，获软件著作权20余项。主持和参与国家级、省部级项目等10余项，获得川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖、校级青年教师教学竞赛一等奖等10余项，并担任多部国内外权威期刊特约审稿人。
 </p>
 
 <h2>Research</h2>
@@ -227,14 +227,15 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <li><p>基于人工智能的智慧成都信息安全风险评估模型构建与研究，成都市科技计划项目，2018-2020</p>
 </li>
 </ul>
-<h2>Student awards</h2>
+<h2>Graduate student awards</h2>
 <ul>
-<li><p>2021，R. W, Second Prize of 12th Session Lanqiao Cup | 吴润泽，第十二届蓝桥杯全国二等奖</p>
-</li>
-<li><p>2021，S. Z, Merit Prize of 12th Session Lanqiao Cup | 张偲杰，第十二届蓝桥杯全国优秀奖</p>
-</li>
-<li><p>2021，L. Deng, Third Prize of National Competition of Computer Design | 邓磊，第十四届中国大学生计算机设计大赛全国三等奖</p>
-</li>
+<li><p>2023，M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 雷雨、何茂霖 “大唐杯”全国大学生新一代信息通信技术大赛“大唐杯”全国大学生新一代信息通信技术大赛国家二等奖</p></li>
+<li><p>2022，M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生付振江获得一等学业奖学金</p></li>
+<li><p>2022，M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生王豪获得二等学业奖学金</p></li>
+<li><p>2022，M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生陈丽蓉获得三等学业奖学金</p></li>
+<li><p>2022，M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生汪潇获得三等学业奖学金</p></li>
+<li><p>2022，M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生赖欢获得二等学业奖学金</p></li>
+<li><p>2022，M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p></li>
 <li><p>2021，M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p></li>
 <li><p>2021，M.S. student H. Hu was awarded National Scholarship ｜ 硕士生胡豪获得研究生国家奖学金</p></li>
 <li><p>2021，M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生李沂莲获得二等学业奖学金</p></li>
