--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </ul>
 <h2>Graduate student awards</h2>
 <ul>
-<li><p>2023，M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 雷雨、何茂霖 “大唐杯”全国大学生新一代信息通信技术大赛“大唐杯”全国大学生新一代信息通信技术大赛国家二等奖</p></li>
-<li><p>2022，M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生付振江获得一等学业奖学金</p></li>
-<li><p>2022，M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生王豪获得二等学业奖学金</p></li>
-<li><p>2022，M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生陈丽蓉获得三等学业奖学金</p></li>
-<li><p>2022，M.S. student Y. Li was awarded Second-class Academic Scholarship ｜ 硕士生汪潇获得三等学业奖学金</p></li>
+<li><p>2023，M.S. students M. He and Y. Li were awarded Second Prize in “Datang” Camp | 雷雨、何茂霖 “大唐杯”全国大学生新一代信息通信技术大赛“大唐杯”全国大学生新一代信息通信技术大赛国家二等奖</p></li>
+<li><p>2022，M.S. student Z. Fu was awarded First-class Academic Scholarship ｜ 硕士生付振江获得一等学业奖学金</p></li>
+<li><p>2022，M.S. student H. Wang was awarded Second-class Academic Scholarship ｜ 硕士生王豪获得二等学业奖学金</p></li>
+<li><p>2022，M.S. student L. Chen was awarded Third-class Academic Scholarship ｜ 硕士生陈丽蓉获得三等学业奖学金</p></li>
+<li><p>2022，M.S. student X. Wang was awarded Third-class Academic Scholarship ｜ 硕士生汪潇获得三等学业奖学金</p></li>
 <li><p>2022，M.S. student H. Lai was awarded Second-class Academic Scholarship ｜ 硕士生赖欢获得二等学业奖学金</p></li>
 <li><p>2022，M.S. student Y. Lei was awarded First-class Academic Scholarship ｜ 硕士生雷雨获得一等学业奖学金</p></li>
 <li><p>2021，M.S. students M. Shao, Y. Liu, H. Hu and Y. Li were awarded Third Prize in Cyber Security Pioneer Training Camp | 邵明谦、刘一凡、胡豪、李沂莲 网络安全尖锋训练营精英百强大赛潜力三等奖</p></li>
