--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ for Aerial RIS-aided Communication", IEEE Transactions on Intelligent Transporta
 </li>
 <li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
 </li>
-<li><p>罗俊松, 王豪, 宁进, 胡艳梅, <b>多滨</b>*, "无人机射频指纹识别方法研究", 无线电工程, 2023. (中文核心)</p>
+<li><p>王豪, 罗俊松，王惠明, 王梓斌, <b>多滨</b>*, "无人机射频指纹识别方法综述", 无线电工程, 2023. (中文核心)</p>
 </li>
 <li><p>A. Shen, J. Luo*, J. Ning, Yi. Li, Z. Wang*, and <b>B. Duo</b>, "Safeguarding UAV Networks against Active Eavesdropping: An Elevation Angle-Distance Trade-off for Secrecy Enhancement", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
 </li>
@@ -230,6 +230,8 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <h2>Graduate student awards</h2>
 <ul>
 <li><p>2023，M.S. students M. He and Y. Li were awarded Second Prize in “Datang” Camp | 雷雨、何茂霖 “大唐杯”全国大学生新一代信息通信技术大赛“大唐杯”全国大学生新一代信息通信技术大赛国家二等奖</p></li>
+<li><p>2022，M.S. student M. Shao was awarded First-class Academic Scholarship ｜ 硕士生刘一凡获得一等学业奖学金</p></li>
+<li><p>2022，M.S. student Y. Liu was awarded First-class Academic Scholarship ｜ 硕士生邵明谦获得一等学业奖学金</p></li>
 <li><p>2022，M.S. student Z. Fu was awarded First-class Academic Scholarship ｜ 硕士生付振江获得一等学业奖学金</p></li>
 <li><p>2022，M.S. student H. Wang was awarded Second-class Academic Scholarship ｜ 硕士生王豪获得二等学业奖学金</p></li>
 <li><p>2022，M.S. student L. Chen was awarded Third-class Academic Scholarship ｜ 硕士生陈丽蓉获得三等学业奖学金</p></li>
