--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Remote Sensing, 2023.（SCI, 中科院2区Top, IF=5.349）</p>
 IEEE Communications Letters, 2023.（SCI, 中科院3区, IF=3.553）</p>
 </li>
 <li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", 
-IEEE Communications Letters, 2022.（SCI, 中科院3区, IF=3.553）</p>
+IEEE Communications Letters, 2023.（SCI, 中科院3区, IF=3.553）</p>
 </li>
 <li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 无线电工程, 2023. (中文核心)</p>
 </li>
@@ -229,7 +229,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </ul>
 <h2>Graduate student awards</h2>
 <ul>
-<li><p>2023，M.S. students M. He and Y. Li were awarded Second Prize in “Datang” Camp | 雷雨、何茂霖 “大唐杯”全国大学生新一代信息通信技术大赛“大唐杯”全国大学生新一代信息通信技术大赛国家二等奖</p></li>
+<li><p>2023，M.S. students M. He and Y. Li were awarded Second Prize in “Datang” Camp | 雷雨、何茂霖 “大唐杯”全国大学生新一代信息通信技术大赛二等奖</p></li>
 <li><p>2022，M.S. student M. Shao was awarded First-class Academic Scholarship ｜ 硕士生刘一凡获得一等学业奖学金</p></li>
 <li><p>2022，M.S. student Y. Liu was awarded First-class Academic Scholarship ｜ 硕士生邵明谦获得一等学业奖学金</p></li>
 <li><p>2022，M.S. student Z. Fu was awarded First-class Academic Scholarship ｜ 硕士生付振江获得一等学业奖学金</p></li>
