--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+  <!-- 添加二级索引 -->
+<div class="menu-item"><a href="#Research">研究方向</a></div>
+<div class="menu-item"><a href="#Research-Group">研究小组</a></div>
+<div class="menu-item"><a href="#Publications">研究成果</a></div>
+  
 <div class="menu-item"><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Google Scholar</a></div>
 <div class="menu-item"><a href="https://www.researchgate1.net/profile/Xiuze-Zhou">ResearchGate</a></div>
 <div class="menu-item"><a href="https://github.com/duobin">GitHub</a></div>
@@ -292,3 +297,4 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
