--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@ His research interests include convex optimization theory, UAV communications fo
 <p>多滨，男，1982年2月生，汉族，九三学社社员，博士（后），成都理工大学计算机与网络安全学院教授，硕士生导师，物联网与智能科学系副主任，全自主智能无人系统研究中心负责人，四川省海外高层次留学人才、四川省侨联特聘专家，山东产业技术研究院项目研究员，IEEE/CIC/CCF Member。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
 近年来，在智能无线通信与网络领域取得了丰硕的研究成果，在IEEE等出版的国内外权威期刊和会议上发表学术论文50余篇，其中SCI检索论文30篇（中科院2区以上论文21篇，ESI热点、高被引论文1篇），EI检索论文18篇，具有较高的影响力，谷歌学术总引用次数千余次，已发表英文学术专著2部，申请专利10余项，获软件著作权20余项。主持和参与国家级、省部级项目等10余项，获得川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖、校级青年教师教学竞赛一等奖等10余项，并担任多部国内外权威期刊特约审稿人。
 </p>
-
+  
+<!-- 添加研究小组部分 -->
+<h2><a name="Research-Group">Rencent News</a></h2>
+<p>我们的研究小组致力于前沿的无人机通信与网络技术研究，拥有多名博士、硕士研究生。小组成员在智能无线通信、无人机集群网络、信息安全等领域有着丰富的研究经验。</p>
+<p>研究小组定期举行学术讨论会，与国内外知名高校和研究机构保持紧密合作，为学生提供广阔的发展平台。</p>
+  
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
@@ -297,4 +302,5 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
