--- a/index.html
+++ b/index.html
@@ -83,10 +83,20 @@ His research interests include convex optimization theory, UAV communications fo
 近年来，在智能无线通信与网络领域取得了丰硕的研究成果，在IEEE等出版的国内外权威期刊和会议上发表学术论文50余篇，其中SCI检索论文30篇（中科院2区以上论文21篇，ESI热点、高被引论文1篇），EI检索论文18篇，具有较高的影响力，谷歌学术总引用次数千余次，已发表英文学术专著2部，申请专利10余项，获软件著作权20余项。主持和参与国家级、省部级项目等10余项，获得川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖、校级青年教师教学竞赛一等奖等10余项，并担任多部国内外权威期刊特约审稿人。
 </p>
   
-<!-- 添加研究小组部分 -->
-<h2><a name="Research-Group">Rencent News</a></h2>
-<p>我们的研究小组致力于前沿的无人机通信与网络技术研究，拥有多名博士、硕士研究生。小组成员在智能无线通信、无人机集群网络、信息安全等领域有着丰富的研究经验。</p>
-<p>研究小组定期举行学术讨论会，与国内外知名高校和研究机构保持紧密合作，为学生提供广阔的发展平台。</p>
+<!-- 新增研究方向部分 -->
+<h2><a name="Research">Rencent News</a></h2>
+<p>无人系统智能感知与精准认知</p>
+<p>无人系统自主协同与优化决策</p>
+<p>人机共融智能机器人技术</p>
+<p>无人系统仿真与测试装备</p>
+<!-- 新增研究小组部分 -->
+<h2><a name="Research-Group">团队介绍</a></h2>
+<p>研究小组一：无人系统智能感知与检测</p>
+<p>研究小组二：智能自主无人集群</p>
+<p>研究小组三：光机电一体化装备</p>
+<p>研究小组四：人工智能与智能机器人</p>
+<p>研究小组五：电力电子先进控制</p> 
+<p>研究小组六：智能无人系统基础理论</p>  
   
 <h2>Research</h2>
 <p>My research interests include: </p>
@@ -302,5 +312,6 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
