--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ His research interests include convex optimization theory, UAV communications fo
 </p>
   
 <!-- 新增研究方向 -->
-<h2><a name="Research">Rencent News</a></h2>
+<h2><a name="Research">研究方向</a></h2>
 <ul>
 <li><p>无人系统智能感知与精准认知</p></li>
 <li><p>无人系统自主协同与优化决策</p></li>
@@ -94,7 +94,8 @@ His research interests include convex optimization theory, UAV communications fo
 <li><p>无人系统仿真与测试装备</p></li>
 </ul>
 <!-- 新增研究小组 -->
-<h2><a name="Research-Group">团队介绍</a></h2>
+<h2><a name="Research-Group">研究小组</a></h2>
+<h3><a name="Research-Group">团队介绍</a></h3>
 <ul>
 <li><p>研究小组一：无人系统智能感知与检测</p></li>
 <li><p>研究小组二：智能自主无人集群</p></li>
@@ -326,6 +327,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
