--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@ His research interests include convex optimization theory, UAV communications fo
 <li><p>研究小组六：智能无人系统基础理论</p></li>
 </ul> 
 <!-- 新增研究成果 -->
-<h2><a name="Publications">研究项目</a></h2>
+<h2><a name="Publications">研究成果</a></h2>
 
 <!-- 新增科研项目 -->
-<h2><a name="scientific research project">研究项目</a></h2>
+<h2><a name="scientific research project">科研项目</a></h2>
   
 <!-- 新增实验展示 -->
  <h2><a name="Experimental demonstration">实验展示</a></h2>
@@ -327,6 +327,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
