--- a/index.html
+++ b/index.html
@@ -109,6 +109,74 @@ His research interests include convex optimization theory, UAV communications fo
 
 <!-- 新增科研项目 -->
 <h2><a name="scientific research project">科研项目</a></h2>
+  <p>团队近年来获批的部分科研项目</p>
+        
+        <table>
+            <thead>
+                <tr>
+                    <th>序号</th>
+                    <th>项目类型</th>
+                    <th>项数</th>
+                    <th>经费（万元）</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>国家自然科学基金委重大项目</td>
+                    <td>1项</td>
+                    <td>2000</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>国家自然科学基金委仪器专项</td>
+                    <td>1项</td>
+                    <td>738</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>国家自然科学基金委重点项目</td>
+                    <td>3项</td>
+                    <td>900</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>军委科技委重大专项课题</td>
+                    <td>1项</td>
+                    <td>2700</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>国家***专项</td>
+                    <td>3项</td>
+                    <td>1100</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>中央军委装备发展部项目</td>
+                    <td>4项</td>
+                    <td>1100</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>国家重点研发计划课题</td>
+                    <td>4项</td>
+                    <td>2594</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>国家海洋局课题</td>
+                    <td>3项</td>
+                    <td>2800</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>*****四期</td>
+                    <td>2项</td>
+                    <td>1550</td>
+                </tr>
+            </tbody>
+        </table>
   
 <!-- 新增实验展示 -->
  <h2><a name="Experimental demonstration">实验展示</a></h2>
@@ -327,6 +395,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
