--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
         </table>
  <h2><a name="Experimental demonstration">实验展示</a></h2>
   <video width="640" height="480" controls>
-      <source src="videos/video.mp4" type="video/mp4">
+      <source src="videos/test_video.mp4" type="video/mp4">
   </video>
 
 </td>
@@ -244,6 +244,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
