--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="menu-item"><a href="#Team Introductin">Team Introductin</a></div>
 <div class="menu-item"><a href="#Research Dirction">Research Dirction</a></div>
 <div class="menu-item"><a href="#Research Result">Research Result</a></div>
-<div class="menu-item"><a href="#scientific research project">scientific research project</a></div>
+<div class="menu-item"><a href="#Scientific Research Project">Scientific Research Project</a></div>
 <div class="menu-item"><a href="#Experimental demonstration">Experimental demonstration</a></div>
   
 <div class="menu-item"><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Google Scholar</a></div>
@@ -165,7 +165,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Full list of publications in Google Scholar</a>.</p> 
 <!-- 新增科研项目 -->
-<h2><a name="scientific research project">科研项目</a></h2>
+<h2><a name="Scientific Research Project">科研项目</a></h2>
   <p>团队近年来获批的部分科研项目</p>
         
         <table>
@@ -244,6 +244,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
