--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ His research interests include convex optimization theory, UAV communications fo
 </ul> 
 
 <h2><a name="Research Result">研究成果</a></h2>
+<h3>一、期刊论文</h3>
 <ol>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", IEEE Transactions on Wireless Communications, 2023. (SCI, 中科院1区Top，IF = 7.016)</p>
 </li>
@@ -164,6 +165,11 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Full list of publications in Google Scholar</a>.</p> 
+<h3>二、会议论文</h3>
+<h3>三、专利</h3>
+<h3>四、知识产权</h3>
+<h3>五、专著</h3>
+
 <!-- 新增科研项目 -->
 <h2><a name="Scientific Research Project">科研项目</a></h2>
   <p>团队近年来获批的部分科研项目</p>
@@ -244,6 +250,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
