--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
         </table>
  <h2><a name="Experimental demonstration">实验展示</a></h2>
   <video width="640" height="480" controls>
-      <source src="videos/test_video.mp4" type="video/mp4">
+      <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=115285562494174&bvid=BV1pXnizLECc&cid=32711443581&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true">
+        
+      </iframe>
   </video>
 
 </td>
@@ -250,6 +252,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
