--- a/index.html
+++ b/index.html
@@ -241,17 +241,23 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
             </tbody>
         </table>
  <h2><a name="Experimental demonstration">实验展示</a></h2>
-  <video width="640" height="480" controls>
-      <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=115285562494174&bvid=BV1pXnizLECc&cid=32711443581&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true">
-        
-      </iframe>
-  </video>
+<div style="position: relative; padding: 30% 45%;">
+    <iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" 
+            src="//player.bilibili.com/player.html?bvid=BV1pXnizLECc&page=1&high_quality=1" 
+            scrolling="no" 
+            border="0" 
+            frameborder="no" 
+            framespacing="0" 
+            allowfullscreen="true">
+    </iframe>
+</div>
 
 </td>
 </tr>
 </table>
 </body>
 </html>
+
 
 
 
