--- a/index.html
+++ b/index.html
@@ -252,15 +252,15 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
      allowfullscreen="true">    
   </iframe>
 </div>
-<p>《蓝莲哈》
-*封面、歌曲仅作分享，请支持原版
-*[如有侵权，告知会立即删除]
-<p>
+<p>《蓝莲哈》<p>
+<p>*封面、歌曲仅作分享，请支持原版<p>
+<p>*[如有侵权，告知会立即删除]<p>
 </td>
 </tr>
 </table>
 </body>
 </html>
+
 
 
 
