--- a/index.html
+++ b/index.html
@@ -243,23 +243,26 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
  <h2><a name="Experimental demonstration">实验展示</a></h2>
 <div style="position: relative; padding: 30% 45%;">
 
-  <iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;"
-    src="//player.bilibili.com/player.html?isOutside=true&aid=115211373643950&bvid=BV1E1p6zWECD&cid=32410042948&p=1" 
-     scrolling="no"
-     border="0"
-     frameborder="no"
-     framespacing="0"
-     allowfullscreen="true">    
+<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=115247797115642&bvid=BV14KnwzSENo&cid=32560776440&p=1" 
+  scrolling="no" 
+  border="0" 
+  frameborder="no" 
+  framespacing="0" 
+  allowfullscreen="true">
+  
   </iframe>
 </div>
-<p>《蓝莲哈》<p>
-<p>*封面、歌曲仅作分享，请支持原版<p>
-<p>*[如有侵权，告知会立即删除]<p>
+<p>首先非常感谢各位支持这一次福建舰公开弹射视频的二次创作，很荣幸能够得到大家的喜爱与支持。虽然我本人账号并非以军宣剪辑为主，但在22号央媒公布福建舰的弹射视频的那一瞬间，我觉得我必须制作这样的一个视频，因为作为一位中国军迷已经等待这一刻实在是太久了，故而便有了现在的这版视频。评论区的同志们也给予了我很多支持与建议，我也进行了多次的修改与换源，但若想进行再一步的改进，可能会对现有的这期视频的弹幕与观众互动造成影响，所以为了满足大家的需求并回应大家的支持，我将尽快制作以本次央媒放出的福建舰弹射视频为主，辅以以往山东舰，辽宁舰的部分机务人员视角的1986年版《TOPGUN》4分钟完整片头调色剪辑复刻版福建舰弹射视频。现在先放出部分样片静帧展示。
+  
+什么？你说为啥不做第二部片头的版本，肥电和超级大黄蜂配得上重型舰载机的音乐吗
+
+我们下个视频见<p>
 </td>
 </tr>
 </table>
 </body>
 </html>
+
 
 
 
