--- a/index.html
+++ b/index.html
@@ -166,9 +166,8 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Full list of publications in Google Scholar</a>.</p> 
 <h3>二、会议论文</h3>
-<h3>三、专利</h3>
+<h3>三、专著</h3>
 <h3>四、知识产权</h3>
-<h3>五、专著</h3>
 
 <!-- 新增科研项目 -->
 <h2><a name="Scientific Research Project">科研项目</a></h2>
@@ -265,6 +264,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <br>
 <br>
 <h3>【毛不易】呓语｜动态歌词 “可是我现在依然不太会转弯，虽然孤单的人偶尔也想有个伴”<h3>
+<div style="position: relative; padding: 30% 45%;">
 <iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" 
   src="//player.bilibili.com/player.html?isOutside=true&aid=339912669&bvid=BV1PR4y1c7np&cid=554069995&p=1" 
   scrolling="no" 
@@ -274,6 +274,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
   allowfullscreen="true">
   
 </iframe>
+</div>
 <br>
 <br>
 <p>一段未醒 又做一段<p>
@@ -310,6 +311,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
