--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </div>
 <br>
 <br>  
-<p>    首先非常感谢各位支持这一次福建舰公开弹射视频的二次创作，很荣幸能够得到大家的喜爱与支持。虽然我本人账号并非以军宣剪辑为主，但在22号央媒公布福建舰的弹射视频的那一瞬间，我觉得我必须制作这样的一个视频，因为作为一位中国军迷已经等待这一刻实在是太久了，故而便有了现在的这版视频。评论区的同志们也给予了我很多支持与建议，我也进行了多次的修改与换源，但若想进行再一步的改进，可能会对现有的这期视频的弹幕与观众互动造成影响，所以为了满足大家的需求并回应大家的支持，我将尽快制作以本次央媒放出的福建舰弹射视频为主，辅以以往山东舰，辽宁舰的部分机务人员视角的1986年版《TOPGUN》4分钟完整片头调色剪辑复刻版福建舰弹射视频。现在先放出部分样片静帧展示。
+<p> 首先非常感谢各位支持这一次福建舰公开弹射视频的二次创作，很荣幸能够得到大家的喜爱与支持。虽然我本人账号并非以军宣剪辑为主，但在22号央媒公布福建舰的弹射视频的那一瞬间，我觉得我必须制作这样的一个视频，因为作为一位中国军迷已经等待这一刻实在是太久了，故而便有了现在的这版视频。评论区的同志们也给予了我很多支持与建议，我也进行了多次的修改与换源，但若想进行再一步的改进，可能会对现有的这期视频的弹幕与观众互动造成影响，所以为了满足大家的需求并回应大家的支持，我将尽快制作以本次央媒放出的福建舰弹射视频为主，辅以以往山东舰，辽宁舰的部分机务人员视角的1986年版《TOPGUN》4分钟完整片头调色剪辑复刻版福建舰弹射视频。现在先放出部分样片静帧展示。
   
 什么？你说为啥不做第二部片头的版本，肥电和超级大黄蜂配得上重型舰载机的音乐吗
 
@@ -264,7 +264,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <br>
 <br>
 <h3>【毛不易】呓语｜动态歌词 “可是我现在依然不太会转弯，虽然孤单的人偶尔也想有个伴”<h3>
-<div style="position: relative; padding: 30% 45%;">
+<div style="position: relative; padding: 30% 45%;"
 <iframe style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" 
   src="//player.bilibili.com/player.html?isOutside=true&aid=339912669&bvid=BV1PR4y1c7np&cid=554069995&p=1" 
   scrolling="no" 
@@ -284,33 +284,13 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 <p>人总需要记住遗憾<p>
 <p>它来过 它走了<p>
 <p>没回头 没问过 你可舍得<p>
-<p>日月蹉跎 小起大落<p>
-<p>光阴里有多少景色<p>
-<p>偶尔也心口一热<p>
-<p>什么都不说<p>
-<p>好过亲手把它撕破<p>
-<p>路还长 梦还多<p>
-<p>被这话 欺骗的 何止你我<p>
-<p>可是我现在依然不太会转弯<p>
-<p>虽然孤单的人<p>
-<p>偶尔也想有个伴<p>
-<p>冷风又吹的时候想说<p>
-<p>这生活会不会有点难<p>
-<p>难道是因为当初有话没讲完<p>
-<p>堵在喉咙里<p>
-<p>却始终不敢大声喊<p>
-<p>算了 别哭<p>
-<p>日月蹉跎 小起大落<p>
-<p>光阴里有多少景色<p>
-<p>偶尔也心口一热<p>
-<p>什么都不说<p>
-<p>好过亲手把它撕破<p>
-<p>路还长 梦还多不多<p>
+
 </td>
 </tr>
 </table>
 </body>
 </html>
+
 
 
 
